[gd_scene load_steps=42 format=3 uid="uid://dewqum56gspv1"]

[ext_resource type="Script" path="res://scripts/GameManager.gd" id="1_6g6iv"]
[ext_resource type="Texture2D" uid="uid://cbhs26502utob" path="res://assets/backgrounds/Game/game_background.jpg" id="2_7omyq"]
[ext_resource type="AudioStream" uid="uid://c8wqsjlvkw1xi" path="res://assets/sfx/8_Atk_Magic_SFX/45_Charge_05.wav" id="2_lvq8i"]
[ext_resource type="Script" path="res://scripts/CharacterSelection.gd" id="3_ycry3"]
[ext_resource type="FontFile" uid="uid://5pppyphfcdit" path="res://assets/fonts/mago3.ttf" id="4_0d2dl"]
[ext_resource type="FontFile" uid="uid://oohk85j86o1w" path="res://assets/fonts/mago1.ttf" id="4_grsdn"]
[ext_resource type="Texture2D" uid="uid://dweuxa8haeudo" path="res://assets/backgrounds/UI/main_menu.png" id="7_x5ycg"]
[ext_resource type="SpriteFrames" uid="uid://cyj6row4wk8j7" path="res://assets/animations/Luke.tres" id="8_onyil"]
[ext_resource type="SpriteFrames" uid="uid://q2ip17s4qfdj" path="res://assets/animations/Daniel.tres" id="9_kd5fa"]
[ext_resource type="SpriteFrames" uid="uid://dd3dc8geapmr" path="res://assets/animations/Maury.tres" id="10_xds1u"]
[ext_resource type="SpriteFrames" uid="uid://dsoweioj178r2" path="res://assets/animations/Mike.tres" id="11_a5it6"]
[ext_resource type="Texture2D" uid="uid://u5b1ln3nv6co" path="res://assets/ui/HP_Bar/red.png" id="14_ecbhy"]
[ext_resource type="Texture2D" uid="uid://c0yfbx4atmgy4" path="res://assets/ui/buttons/attack.tres" id="14_rhaus"]
[ext_resource type="Texture2D" uid="uid://v0t4114qf1wh" path="res://assets/ui/HP_Bar/green.png" id="15_713f7"]
[ext_resource type="Texture2D" uid="uid://dubn3s1h7rqvj" path="res://assets/ui/buttons/heal.tres" id="15_ox8tx"]
[ext_resource type="Texture2D" uid="uid://dme7c5pq8p757" path="res://assets/ui/coin/coin_head.tres" id="16_ulp25"]
[ext_resource type="Texture2D" uid="uid://b61tr2iybxpbn" path="res://assets/ui/coin/coin_tail.tres" id="17_ry4pe"]
[ext_resource type="Texture2D" uid="uid://b7stlpmco5i0" path="res://assets/ui/coin/Coin_Silver-Sheet.png" id="18_k8mf6"]
[ext_resource type="Texture2D" uid="uid://bggjcd580loi1" path="res://assets/ui/buttons/bag.tres" id="19_mgy75"]
[ext_resource type="PackedScene" uid="uid://cg0fi6000o6os" path="res://scenas/coin.tscn" id="20_lpn07"]

[sub_resource type="LabelSettings" id="LabelSettings_x62y6"]
font = ExtResource("4_0d2dl")
font_size = 50
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_88epi"]
font = ExtResource("4_grsdn")
font_size = 70
outline_size = 3
outline_color = Color(0, 0, 0, 1)
shadow_color = Color(1, 1, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_jr5ir"]
font = ExtResource("4_grsdn")
font_size = 70

[sub_resource type="LabelSettings" id="LabelSettings_2d8cr"]
font = ExtResource("4_0d2dl")
font_size = 200
font_color = Color(0, 0, 0, 1)
outline_size = 5

[sub_resource type="LabelSettings" id="LabelSettings_6n6ph"]
font = ExtResource("4_0d2dl")
font_size = 200
outline_size = 10
outline_color = Color(1, 0, 0, 1)
shadow_size = 5
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_s4vmo"]
font = ExtResource("4_grsdn")
font_size = 70

[sub_resource type="LabelSettings" id="LabelSettings_wf4k0"]
font = ExtResource("4_grsdn")
font_size = 70

[sub_resource type="AtlasTexture" id="AtlasTexture_fh0tu"]
atlas = ExtResource("18_k8mf6")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxfs1"]
atlas = ExtResource("18_k8mf6")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ouops"]
atlas = ExtResource("18_k8mf6")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ctb2x"]
atlas = ExtResource("18_k8mf6")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0r8l"]
atlas = ExtResource("18_k8mf6")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ikqg8"]
atlas = ExtResource("18_k8mf6")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_71s4p"]
atlas = ExtResource("18_k8mf6")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_35t68"]
atlas = ExtResource("18_k8mf6")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n2yqi"]
atlas = ExtResource("18_k8mf6")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pkv5l"]
atlas = ExtResource("18_k8mf6")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4ygh"]
atlas = ExtResource("18_k8mf6")
region = Rect2(32, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_jj21l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fh0tu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxfs1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ouops")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ctb2x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0r8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikqg8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_71s4p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35t68")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2yqi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pkv5l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4ygh")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_ecb7w"]
font = ExtResource("4_grsdn")
font_size = 36

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_83bjg"]

[node name="GameScene" type="Node2D"]

[node name="GameManager" type="Node2D" parent="."]
unique_name_in_owner = true
visible = false
script = ExtResource("1_6g6iv")

[node name="RoundSound" type="AudioStreamPlayer2D" parent="GameManager"]
unique_name_in_owner = true
stream = ExtResource("2_lvq8i")
volume_db = 9.905

[node name="Background" type="TextureRect" parent="."]
unique_name_in_owner = true
self_modulate = Color(0.787759, 0.787759, 0.787759, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_7omyq")
expand_mode = 3

[node name="LeftSpawner" type="Node2D" parent="Background"]
unique_name_in_owner = true
position = Vector2(500, 550)
scale = Vector2(7, 7)

[node name="RightSpawner" type="Node2D" parent="Background"]
unique_name_in_owner = true
position = Vector2(1420, 550)
scale = Vector2(7, 7)

[node name="UI" type="Node" parent="."]

[node name="StatsCanvas" type="Control" parent="UI"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="LeftCharacter" type="Node2D" parent="UI/StatsCanvas"]
unique_name_in_owner = true
position = Vector2(500, 150)
scale = Vector2(1.2, 1.2)

[node name="ProgressBar" type="TextureProgressBar" parent="UI/StatsCanvas/LeftCharacter"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -60.0
offset_right = 300.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
value = 30.0
nine_patch_stretch = true
texture_under = ExtResource("14_ecbhy")
texture_progress = ExtResource("15_713f7")

[node name="Percentage" type="Label" parent="UI/StatsCanvas/LeftCharacter/ProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "999%"
label_settings = SubResource("LabelSettings_x62y6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Name" type="Label" parent="UI/StatsCanvas/LeftCharacter/ProgressBar"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -50.0
offset_bottom = 20.0
grow_horizontal = 2
text = "Name"
label_settings = SubResource("LabelSettings_88epi")
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightCharacter" type="Node2D" parent="UI/StatsCanvas"]
unique_name_in_owner = true
position = Vector2(1420, 150)
scale = Vector2(1.2, 1.2)

[node name="ProgressBar" type="TextureProgressBar" parent="UI/StatsCanvas/RightCharacter"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -60.0
offset_right = 300.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
value = 30.0
nine_patch_stretch = true
texture_under = ExtResource("14_ecbhy")
texture_progress = ExtResource("15_713f7")

[node name="Percentage" type="Label" parent="UI/StatsCanvas/RightCharacter/ProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "999%"
label_settings = SubResource("LabelSettings_x62y6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Name" type="Label" parent="UI/StatsCanvas/RightCharacter/ProgressBar"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -50.0
offset_bottom = 20.0
grow_horizontal = 2
text = "Name"
label_settings = SubResource("LabelSettings_88epi")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CharacterCanvas" type="Control" parent="UI"]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_ycry3")

[node name="Background" type="TextureRect" parent="UI/CharacterCanvas"]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("7_x5ycg")
expand_mode = 1
flip_h = true

[node name="Opacity" type="Panel" parent="UI/CharacterCanvas/Background"]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="Luke" type="Button" parent="UI/CharacterCanvas/Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -825.0
offset_top = -40.0
offset_right = -525.0
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2
icon_alignment = 1
expand_icon = true

[node name="LukeTxt" type="Label" parent="UI/CharacterCanvas/Background/Luke"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -100.0
offset_bottom = -20.0
grow_horizontal = 2
text = "Luke
"
label_settings = SubResource("LabelSettings_jr5ir")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LukeAnim" type="AnimatedSprite2D" parent="UI/CharacterCanvas/Background/Luke"]
position = Vector2(148, 26)
scale = Vector2(3, 3)
sprite_frames = ExtResource("8_onyil")
animation = &"Idle"
autoplay = "Idle"
frame_progress = 0.429951

[node name="Daniel" type="Button" parent="UI/CharacterCanvas/Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -375.0
offset_top = -40.0
offset_right = -75.0
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2
icon_alignment = 1
expand_icon = true

[node name="DanielTxt" type="Label" parent="UI/CharacterCanvas/Background/Daniel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -100.0
offset_bottom = -20.0
grow_horizontal = 2
text = "Daniel"
label_settings = SubResource("LabelSettings_jr5ir")
horizontal_alignment = 1
vertical_alignment = 1

[node name="DanielAnim" type="AnimatedSprite2D" parent="UI/CharacterCanvas/Background/Daniel"]
position = Vector2(148, 26)
scale = Vector2(3, 3)
sprite_frames = ExtResource("9_kd5fa")
animation = &"Idle"
autoplay = "Idle"

[node name="Mauro" type="Button" parent="UI/CharacterCanvas/Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 75.0
offset_top = -40.0
offset_right = 375.0
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2
icon_alignment = 1
expand_icon = true

[node name="MauroTxt" type="Label" parent="UI/CharacterCanvas/Background/Mauro"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -100.0
offset_bottom = -20.0
grow_horizontal = 2
text = "Maury
"
label_settings = SubResource("LabelSettings_jr5ir")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MauroAnim" type="AnimatedSprite2D" parent="UI/CharacterCanvas/Background/Mauro"]
position = Vector2(148, 26)
scale = Vector2(3, 3)
sprite_frames = ExtResource("10_xds1u")
animation = &"Idle"
autoplay = "Idle"

[node name="Mike" type="Button" parent="UI/CharacterCanvas/Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 525.0
offset_top = -40.0
offset_right = 825.0
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2
icon_alignment = 1
expand_icon = true

[node name="MikeTxt" type="Label" parent="UI/CharacterCanvas/Background/Mike"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -100.0
offset_bottom = -20.0
grow_horizontal = 2
text = "Mike
"
label_settings = SubResource("LabelSettings_jr5ir")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MikeAnim" type="AnimatedSprite2D" parent="UI/CharacterCanvas/Background/Mike"]
position = Vector2(148, 26)
scale = Vector2(3, 3)
sprite_frames = ExtResource("11_a5it6")
animation = &"Idle"
autoplay = "Idle"

[node name="TitleTxt" type="Label" parent="UI/CharacterCanvas/Background"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_top = 100.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
text = "Select Character"
label_settings = SubResource("LabelSettings_2d8cr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="RoundCanvas" type="Control" parent="UI"]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Background" type="Panel" parent="UI/RoundCanvas"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="RoundText" type="Label" parent="UI/RoundCanvas/Background"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 200.0
offset_right = 300.0
offset_bottom = 360.0
grow_horizontal = 2
text = "ROUND 0"
label_settings = SubResource("LabelSettings_6n6ph")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameplayCanvas" type="Control" parent="UI"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PurseTypeSelection" type="Panel" parent="UI/GameplayCanvas"]
visible = false
self_modulate = Color(0, 0, 0, 0.235294)
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="AttackImg" type="Button" parent="UI/GameplayCanvas/PurseTypeSelection"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -275.0
offset_top = -75.0
offset_right = -125.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
text = "
"
icon = ExtResource("14_rhaus")
icon_alignment = 1
expand_icon = true

[node name="AttackText" type="Label" parent="UI/GameplayCanvas/PurseTypeSelection/AttackImg"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -70.0
offset_bottom = -14.0
grow_horizontal = 2
text = "Attack"
label_settings = SubResource("LabelSettings_s4vmo")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealImg" type="Button" parent="UI/GameplayCanvas/PurseTypeSelection"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 125.0
offset_top = -75.0
offset_right = 275.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
icon = ExtResource("15_ox8tx")
icon_alignment = 1
expand_icon = true

[node name="HealText" type="Label" parent="UI/GameplayCanvas/PurseTypeSelection/HealImg"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -70.0
offset_bottom = -14.0
grow_horizontal = 2
text = "Heal"
label_settings = SubResource("LabelSettings_s4vmo")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PurseTypeSelection2" type="Panel" parent="UI/GameplayCanvas"]
visible = false
self_modulate = Color(0, 0, 0, 0.235294)
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="HeadImg" type="Button" parent="UI/GameplayCanvas/PurseTypeSelection2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -275.0
offset_top = -75.0
offset_right = -125.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
icon = ExtResource("16_ulp25")
icon_alignment = 1
expand_icon = true

[node name="HeadText" type="Label" parent="UI/GameplayCanvas/PurseTypeSelection2/HeadImg"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -70.0
offset_bottom = -14.0
grow_horizontal = 2
text = "Head"
label_settings = SubResource("LabelSettings_s4vmo")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CrossImg" type="Button" parent="UI/GameplayCanvas/PurseTypeSelection2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 125.0
offset_top = -75.0
offset_right = 275.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
icon = ExtResource("17_ry4pe")
icon_alignment = 1
expand_icon = true

[node name="CrossText" type="Label" parent="UI/GameplayCanvas/PurseTypeSelection2/CrossImg"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -70.0
offset_bottom = -14.0
grow_horizontal = 2
text = "Cross"
label_settings = SubResource("LabelSettings_s4vmo")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CoinFlipSelection" type="Panel" parent="UI/GameplayCanvas"]
visible = false
self_modulate = Color(0, 0, 0, 0.235294)
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="SingleCoin" type="Button" parent="UI/GameplayCanvas/CoinFlipSelection"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -475.0
offset_top = -75.0
offset_right = -325.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
icon_alignment = 1
expand_icon = true

[node name="Label" type="Label" parent="UI/GameplayCanvas/CoinFlipSelection/SingleCoin"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = -40.0
offset_top = -70.0
offset_right = 41.0
offset_bottom = -14.0
grow_horizontal = 2
text = "Single Coin"
label_settings = SubResource("LabelSettings_wf4k0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CoinAnim" type="AnimatedSprite2D" parent="UI/GameplayCanvas/CoinFlipSelection/SingleCoin"]
position = Vector2(75, 75)
scale = Vector2(4.6, 4.6)
sprite_frames = SubResource("SpriteFrames_jj21l")
animation = &"Idle"
autoplay = "Idle"
frame_progress = 0.416074

[node name="Use" type="Label" parent="UI/GameplayCanvas/CoinFlipSelection/SingleCoin"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 35.0
offset_top = 145.0
offset_right = -33.0
offset_bottom = 201.0
grow_horizontal = 2
text = "∞"
label_settings = SubResource("LabelSettings_ecb7w")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SmallBag" type="Button" parent="UI/GameplayCanvas/CoinFlipSelection"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -75.0
offset_right = 75.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
icon = ExtResource("19_mgy75")
icon_alignment = 1
expand_icon = true

[node name="Label" type="Label" parent="UI/GameplayCanvas/CoinFlipSelection/SmallBag"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -70.0
offset_bottom = -14.0
grow_horizontal = 2
text = "Small Purse"
label_settings = SubResource("LabelSettings_wf4k0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CoinAnim" type="AnimatedSprite2D" parent="UI/GameplayCanvas/CoinFlipSelection/SmallBag"]
position = Vector2(75, 130)
sprite_frames = SubResource("SpriteFrames_jj21l")
animation = &"Idle"
autoplay = "Idle"
frame = 9
frame_progress = 0.0681761

[node name="Amount" type="Label" parent="UI/GameplayCanvas/CoinFlipSelection/SmallBag"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 79.0
offset_top = 101.0
offset_right = 11.0
offset_bottom = 157.0
grow_horizontal = 2
text = "x 3"
label_settings = SubResource("LabelSettings_ecb7w")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Use" type="Label" parent="UI/GameplayCanvas/CoinFlipSelection/SmallBag"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 40.0
offset_top = 145.0
offset_right = -28.0
offset_bottom = 201.0
grow_horizontal = 2
text = "3/10
"
label_settings = SubResource("LabelSettings_ecb7w")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BigBag" type="Button" parent="UI/GameplayCanvas/CoinFlipSelection"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 325.0
offset_top = -75.0
offset_right = 475.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
icon = ExtResource("19_mgy75")
icon_alignment = 1
expand_icon = true

[node name="Label" type="Label" parent="UI/GameplayCanvas/CoinFlipSelection/BigBag"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -70.0
offset_bottom = -14.0
grow_horizontal = 2
text = "Big Purse
"
label_settings = SubResource("LabelSettings_wf4k0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CoinAnim" type="AnimatedSprite2D" parent="UI/GameplayCanvas/CoinFlipSelection/BigBag"]
position = Vector2(75, 130)
sprite_frames = SubResource("SpriteFrames_jj21l")
animation = &"Idle"
autoplay = "Idle"
frame_progress = 0.0801582

[node name="Amount" type="Label" parent="UI/GameplayCanvas/CoinFlipSelection/BigBag"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 79.0
offset_top = 101.0
offset_right = 11.0
offset_bottom = 157.0
grow_horizontal = 2
text = "x 5"
label_settings = SubResource("LabelSettings_ecb7w")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Use" type="Label" parent="UI/GameplayCanvas/CoinFlipSelection/BigBag"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 40.0
offset_top = 145.0
offset_right = -28.0
offset_bottom = 201.0
grow_horizontal = 2
text = "3/10
"
label_settings = SubResource("LabelSettings_ecb7w")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HeadOrTailGame" type="Panel" parent="UI/GameplayCanvas"]
visible = false
self_modulate = Color(0, 0, 0, 0.235294)
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="CoinSide" type="TextureRect" parent="UI/GameplayCanvas/HeadOrTailGame"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -110.0
offset_bottom = -110.0
grow_horizontal = 2
grow_vertical = 2

[node name="Head" type="TextureRect" parent="UI/GameplayCanvas/HeadOrTailGame/CoinSide"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -60.0
offset_right = 60.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("16_ulp25")

[node name="Tail" type="TextureRect" parent="UI/GameplayCanvas/HeadOrTailGame/CoinSide"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -60.0
offset_right = 60.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("17_ry4pe")

[node name="Coins" type="Node2D" parent="UI/GameplayCanvas/HeadOrTailGame"]

[node name="Coin" parent="UI/GameplayCanvas/HeadOrTailGame/Coins" instance=ExtResource("20_lpn07")]
position = Vector2(960, 622)
scale = Vector2(3, 3)

[node name="Coin2" parent="UI/GameplayCanvas/HeadOrTailGame/Coins" instance=ExtResource("20_lpn07")]
position = Vector2(1085, 622)
scale = Vector2(3, 3)

[node name="Coin3" parent="UI/GameplayCanvas/HeadOrTailGame/Coins" instance=ExtResource("20_lpn07")]
position = Vector2(1201, 622)
scale = Vector2(3, 3)

[node name="Coin4" parent="UI/GameplayCanvas/HeadOrTailGame/Coins" instance=ExtResource("20_lpn07")]
position = Vector2(835, 622)
scale = Vector2(3, 3)

[node name="Coin5" parent="UI/GameplayCanvas/HeadOrTailGame/Coins" instance=ExtResource("20_lpn07")]
position = Vector2(715, 622)
scale = Vector2(3, 3)

[node name="GameOver" type="Control" parent="UI"]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Background" type="Panel" parent="UI/GameOver"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
theme_override_styles/panel = SubResource("StyleBoxFlat_83bjg")

[node name="GameOverText" type="Label" parent="UI/GameOver/Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -383.0
offset_top = -80.0
offset_right = 383.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
text = "Tizio wins"
label_settings = SubResource("LabelSettings_6n6ph")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
autoplay = true

[connection signal="button_down" from="UI/CharacterCanvas/Background/Luke" to="UI/CharacterCanvas" method="_on_luke_button_down"]
[connection signal="button_down" from="UI/CharacterCanvas/Background/Daniel" to="UI/CharacterCanvas" method="_on_daniel_button_down"]
[connection signal="button_down" from="UI/CharacterCanvas/Background/Mauro" to="UI/CharacterCanvas" method="_on_mauro_button_down"]
[connection signal="button_down" from="UI/CharacterCanvas/Background/Mike" to="UI/CharacterCanvas" method="_on_mike_button_down"]
[connection signal="button_down" from="UI/GameplayCanvas/PurseTypeSelection/AttackImg" to="GameManager" method="_on_attack_button_down"]
[connection signal="button_down" from="UI/GameplayCanvas/PurseTypeSelection/HealImg" to="GameManager" method="_on_heal_button_down"]
[connection signal="button_down" from="UI/GameplayCanvas/PurseTypeSelection2/HeadImg" to="GameManager" method="_on_head_button_down"]
[connection signal="button_down" from="UI/GameplayCanvas/PurseTypeSelection2/CrossImg" to="GameManager" method="_on_cross_button_down"]
[connection signal="button_down" from="UI/GameplayCanvas/CoinFlipSelection/SingleCoin" to="GameManager" method="_on_single_coin_button_down"]
[connection signal="button_down" from="UI/GameplayCanvas/CoinFlipSelection/SmallBag" to="GameManager" method="_on_small_bag_button_down"]
[connection signal="button_down" from="UI/GameplayCanvas/CoinFlipSelection/BigBag" to="GameManager" method="_on_big_bag_button_down"]
[connection signal="finished" from="AudioStreamPlayer2D" to="GameManager" method="_on_audio_stream_player_2d_finished"]
